--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Lecturify</title>
+    <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:600' />
+    <link rel="stylesheet" type"text/css" href="build/css/styles.css" />
+  </head>
   <body>
     <div id="app"></div>
+    <script src="build/scripts/bundle.js"></script>
   </body>
 </html>
